@@ -1,5 +1,5 @@
 -------------------------------------------------------------------------------
-$Id: README.1,v 1.15 1993/04/08 21:46:26 gray Exp $
+$Id: README.1,v 1.16 1993/04/14 22:13:44 gray Exp $
 -------------------------------------------------------------------------------
 
 INSTALLATION:
@@ -32,7 +32,7 @@ the gnu archive sites.
 
 QUICK NOTES:
 
-- the system is definitely dependent on a good ansi-c compiler like gcc.
+- the system is pretty dependent on a good ansi-c compiler like gcc.
 - the file Manifest contains a list of each of the file and what it does.
 - configure can be regenerated by the autoconf script.
 - the file sample.c contains an example of some of the malloc macros
