@@ -21,7 +21,7 @@
  *
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: chunk.h,v 1.17 1993/04/08 21:46:32 gray Exp $
+ * $Id: chunk.h,v 1.18 1993/04/14 22:13:50 gray Exp $
  */
 
 #ifndef __CHUNK_H__
@@ -30,8 +30,9 @@
 #include "malloc.h"			/* for IMPORT ... */
 
 /* some argument defines */
-#define CHUNK_PNT_ANAL	0		/* anal checking on pointer */
-#define CHUNK_PNT_LOOSE	1		/* looser checking */
+#define CHUNK_PNT_EXACT		1	/* pointer must be on block */
+#define CHUNK_PNT_LOOSE		2	/* looser checking */
+#define CHUNK_PNT_NULL		4	/* watch for null char */
 
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
 
@@ -49,7 +50,8 @@ IMPORT	int	_chunk_heap_check(void);
 
 /*
  * run extensive tests on PNT from FUNC. test PNT HOW_MUCH of MIN_SIZE
- * (or 0 if unknown).  returns [NO]ERROR
+ * (or 0 if unknown).  CHECK is flags for types of checking (see chunk.h).
+ * returns [NO]ERROR
  */
 IMPORT	int	_chunk_pnt_check(const char * func, void * pnt,
 				 const int check, int min_size);
