@@ -21,12 +21,13 @@
  *
  * The author of the program may be contacted at gray.watson@antaire.com
  *
- * $Id: compat.h,v 1.7 1993/04/05 01:28:57 gray Exp $
+ * $Id: compat.h,v 1.8 1993/04/14 22:13:53 gray Exp $
  */
 
 #ifndef __COMPAT_H__
 #define __COMPAT_H__
 
+#include "conf.h"			/* for HAVE... */
 #include "malloc.h"			/* for IMPORT ... */
 
 /*<<<<<<<<<<  The below prototypes are auto-generated by fillproto */
@@ -34,53 +35,67 @@
 /*
  * copy LEN characters from FROM to TO
  */
-#if __GNUC__ < 2
-IMPORT	char	*memcpy(char * to, const char * from, int len);
+#ifndef HAVE_MEMCPY
+IMPORT	char	*memcpy(char * to, const char * from, MALLOC_SIZE len);
 #endif
 
 /*
  * compare LEN characters, return -1,0,1 if STR1 is <,==,> STR2
  */
-#if __GNUC__ < 2
-IMPORT	int	memcmp(const char * str1, const char * str2, int len);
+#ifndef HAVE_MEMCMP
+IMPORT	int	memcmp(const char * str1, const char * str2, MALLOC_SIZE len);
 #endif
 
 /*
  * set LEN characters in STR to character CH
  */
-IMPORT	char	*memset(char * str, int ch, int len);
+#ifndef HAVE_MEMSET
+IMPORT	char	*memset(char * str, int ch, MALLOC_SIZE len);
+#endif
 
 /*
  * find CH in STR by searching backwards through the string
  */
+#ifndef HAVE_INDEX
 IMPORT	char	*index(const char * str, int ch);
+#endif
 
 /*
  * find CH in STR by searching backwards through the string
  */
+#ifndef HAVE_RINDEX
 IMPORT	char	*rindex(const char * str, int ch);
+#endif
 
 /*
  * concatenate STR2 onto the end of STR1
  */
+#ifndef HAVE_STRCAT
 IMPORT	char	*strcat(char * str1, const char * str2);
+#endif
 
 /*
  * returns -1,0,1 on whether STR1 is <,==,> STR2
  */
+#ifndef HAVE_STRCMP
 IMPORT	int	strcmp(const char * str1, const char * str2);
+#endif
 
 /*
  * return the length in characters of STR
  */
-IMPORT	int	strlen(const char * str);
+#ifndef HAVE_STRLEN
+IMPORT	MALLOC_SIZE	strlen(const char * str);
+#endif
 
 /*
  * get the next token from STR (pass in NULL on the 2nd, 3rd, etc. calls),
  * tokens are a list of characters deliminated by a character from DELIM.
  * writes null into STR to end token.
  */
+#ifndef HAVE_STRTOK
 IMPORT	char	*strtok(char * str, char * delim);
+#endif
 
 /*<<<<<<<<<<   This is end of the auto-generated output from fillproto. */
 
